# RainyOCR

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
docs/: design.md
src/BaiduOCR/: ocr.py
src/OCRAgent/: baidu_ocr.py  openai_ocr.py
src/TranslateAgent/: baidu_translate.py  openai_translate.py  translate.py
src/UI/: app.py  controller.py  overlay.py  popup.py  settings_dialog.py  tray.py
src/utils/: baidu_ocr_result_processor.py  baidu_translate_result_processor.py  errors.py  get_baidu_access_token.py  get_env.py  screenshot.py  translate_result_processor.py
